--- a/style.css
+++ b/style.css
@@ -9,7 +9,15 @@
 html{
   -webkit-text-size-adjust: 100%;
 }
+body{
+  background-color: rgb(0, 0, 0);
+}
+a {
+  color: inherit;
+  text-decoration: none;
+}
 
+/*"Copied!" message's style*/
 #copyMessage{
   position: absolute;
   display: none;
@@ -21,46 +29,30 @@ html{
   border-radius: 100% 100% 100% 0%;
 }
 
-
+/*Sections of the webpage*/
 #boxprojects{
   position: relative;
   width: 100%;
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
 }
-
-
 #boxhome {
   position: relative;
   display: flex;
   font-weight: bold;
 }
-
 #boxabout {
-position: relative;
-width: 100%;
-min-height: 100vh;
-min-height: calc(var(--vh, 1vh) * 100);
-}
-
-#boxskills {
-position: relative;
-width: 100%;
-min-height: 100vh;
-min-height: calc(var(--vh, 1vh) * 100);
-}
-
-#welcome {
-  font-family: sans-serif;
   position: relative;
-  font-size: 9vmin;
-  visibility: hidden;
+  width: 100%;
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
-
-#abouttext {
-  margin: 1% 0% 10% 0%;
+#boxskills {
+  position: relative;
+  width: 100%;
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
-
 #boxcontact{
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
@@ -70,25 +62,23 @@ min-height: calc(var(--vh, 1vh) * 100);
   position: relative;
 }
 
+/*Generic settings for sections*/
 .section{
   width: 100%;
   min-height: 100vh;
   min-height: calc(var(--vh, 1vh) * 100);
   padding: 1px 0px 0px 0px;
 }
-
 .sectiontitle{
-  margin: 10% 0% 5% 0%;
+  margin: 100px 0px 25px 0px;
   font-size: 52.5px;
   font-weight: bold;
 }
-
 .wrapper {
   position: relative;
   width: 80%;
   margin: 0% 10%;
 }
-
 .verticalwrapper {
   position: absolute;
   height: 70%;
@@ -96,46 +86,51 @@ min-height: calc(var(--vh, 1vh) * 100);
   max-height: 70%;
   transform: translate(0, 21.25%);
 }
-
 .centeredtext {
-text-align: center;
-position: relative;
-top: 50%;
-transform: translate(0, -50%);
+  text-align: center;
+  position: relative;
+  top: 50%;
+  transform: translate(0, -50%);
 }
-
 .sectiontext{
   font-size: 22.5px;
 }
 
-
-body{
-  background-color: rgb(0, 0, 0);
+/*Welcome message*/
+#welcome {
+  font-family: sans-serif;
+  position: relative;
+  font-size: 9vmin;
+  visibility: hidden;
 }
-
-a {
-  color: inherit;
-  text-decoration: none;
+/*About section*/
+#abouttext {
+  margin: 1% 0px 0px 0px;
+}
+.abouttextcontainer{
+  border-radius: 22.5px;
+  background-color: rgba(32,33,36,0.8);
+  padding: 16px;
+  margin: 32px 0px 32px 0px;
 }
 
 .button, .activebutton{
   font-size: 26.25px;
   color: rgb(245, 240, 255);
   padding: 0px 19.6875px 0px 19.6875px;
-    font-weight: bold;
-    transform: scale(1.0);
-    line-height: 49.875px;
-    border-radius: 24.9375px;
-    box-shadow: 0px 0px 0px rgba(0,0,0,0.0);
-    -webkit-transition: color 100ms linear, transform 100ms linear, box-shadow 100ms linear, box-shadow 100ms linear, background-color linear 100ms;
-    background-color: rgba(32,33,36,0.8);
-    cursor: pointer;
-
-      user-select: none;
-      -moz-user-select: none;
-      -khtml-user-select: none;
-      -webkit-user-select: none;
-      -o-user-select: none;
+  font-weight: bold;
+  transform: scale(1.0);
+  line-height: 49.875px;
+  border-radius: 24.9375px;
+  box-shadow: 0px 0px 0px rgba(0,0,0,0.0);
+  -webkit-transition: color 100ms linear, transform 100ms linear, box-shadow 100ms linear, box-shadow 100ms linear, background-color linear 100ms;
+  background-color: rgba(32,33,36,0.8);
+  cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
 }
 
 .button:hover, .activebutton{
@@ -175,8 +170,7 @@ a {
 }
 
 .projectitem{
-  border-radius: 2vh;
-  border-radius: calc(var(--vh, 1vh) * 2);
+  border-radius: 22.5px;
   overflow: hidden;
   width: 300px;
   height: 375px;
@@ -296,10 +290,9 @@ a {
   height: 80px;
   width: 80px;
   background: rgba(32,33,36,0.8);
-    border-radius: 40px;
-    display: inline-block;
+  border-radius: 40px;
+  display: inline-block;
 }
-
 
 
 .cpypic{
