--- a/style.css
+++ b/style.css
@@ -106,35 +106,66 @@ a {
 /*About section*/
 #abouttext {
   margin: 1% 0px 0px 0px;
+  text-align: center;
+  border-radius: 10px;
+  background-color: rgba(22,23,26,0.8);
+  margin: 32px 0px 32px 0px;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(65, 95, 219);
+  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: flex-start;
+  overflow: hidden;
 }
 .abouttextcontainer{
-  border-radius: 22.5px;
   background-color: rgba(32,33,36,0.8);
   padding: 16px;
-  margin: 32px 0px 32px 0px;
+
   color: rgb(206,208,210);
+  width: 500px;
+  text-align: left;
+  flex-grow: 1;
+  border-style: dashed;
+  border-width: 2px 2px 2px 2px;
+  border-color: rgba(62,63,66,0.8);
+}
+.aboutsidebar{
+  display: block;
+  text-align: center;
+  align-content: center;
+}
+.portfoliopic{
+  width: 300px;
+  margin: 0px auto 0px auto;
+  padding: 16px;
+  border-radius: 20px;
 }
 
 /*Skills section*/
 .skillscontainer{
   display: flex;
   flex-wrap: wrap;
-  justify-content: center;
-  align-items: stretch;
+  justify-content: space-around;
+  align-items: center;
 }
 .skillcontainer{
-  border-radius: 22.5px;
-  background-color: rgba(32,33,36,0.8);
+  border-radius: 10px;
+  background-color: rgba(22,23,26,0.8);
   margin: 16px 16px 16px 16px;
-  display: inline;
-  flex-grow: 1;
+  display: block;
   display: flex;
-  align-items: : flex-start;
+  align-items: flex-start;
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(65, 95, 219);
+  overflow:hidden;
 }
 .skillicon{
   filter: invert(100%);
   width: 80px;
-  height: 80px;
+  height: 100%;
   padding: 16px;
 }
 .skilltitle{
@@ -142,11 +173,15 @@ a {
   padding: 16px 16px 0px 0px;
 }
 .skilldesc{
-  padding: 0px 16px 16px 0px;
+  padding: 0px 16px 16px 16px;
   color: rgb(206,208,210);
 }
 .skilltext{
-
+background-color: rgba(32,33,36,0.8);
+padding: 0px 0px 0px 16px;
+border-left-style: dashed;
+border-left-width: 2px;
+border-color: rgba(62,63,66,0.8);
 }
 
 .button, .activebutton{
@@ -205,6 +240,9 @@ a {
 }
 
 .projectitem{
+  border-style: solid;
+  border-width: 2px;
+  border-color: rgb(65, 95, 219);
   border-radius: 22.5px;
   overflow: hidden;
   width: 300px;
@@ -214,11 +252,6 @@ a {
   transform: scale(1.0);
   -webkit-transition: transform 100ms linear, background-color 100ms linear;
   cursor: pointer;
-
-  border-width: 0.5vh;
-  border-width: calc(var(--vh, 1vh) * 0.5);
-  border-style: solid;
-  border-color: rgb(22,24,28);
 
   user-select: none;
   -moz-user-select: none;
@@ -230,7 +263,6 @@ a {
 .projectitem:hover{
   transform: scale(1.1);
   background-color: rgba(52,54,58,1);
-  border-color: rgb(42,44,48);
 }
 .projectitem:active{
   background-color: rgba(72,74,78,0.9);
@@ -241,6 +273,7 @@ a {
   height: 50%;
   object-fit: cover;
   object-position: center;
+  border-radius: 22.5px 22.5px 0px 0px;
 }
 
 .projectname{
