--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ a {
   padding: 1px 0px 0px 0px;
 }
 .sectiontitle{
-  margin: 100px 0px 25px 0px;
+  margin: 120px 0px 25px 0px;
   font-size: 52.5px;
   font-weight: bold;
 }
@@ -110,9 +110,6 @@ a {
   border-radius: 10px;
   background-color: rgba(22,23,26,0.8);
   margin: 32px 0px 32px 0px;
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgb(65, 95, 219);
   text-align: left;
   display: flex;
   flex-wrap: wrap;
@@ -122,14 +119,10 @@ a {
 .abouttextcontainer{
   background-color: rgba(32,33,36,0.8);
   padding: 16px;
-
   color: rgb(206,208,210);
   width: 500px;
   text-align: left;
   flex-grow: 1;
-  border-style: dashed;
-  border-width: 2px 2px 2px 2px;
-  border-color: rgba(62,63,66,0.8);
 }
 .aboutsidebar{
   display: block;
@@ -137,9 +130,10 @@ a {
   align-content: center;
 }
 .portfoliopic{
-  width: 300px;
-  margin: 0px auto 0px auto;
-  padding: 16px;
+  float: right;
+  width: 170px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   border-radius: 20px;
 }
 
@@ -148,42 +142,42 @@ a {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-around;
-  align-items: center;
+  align-items: flex-start;
 }
 .skillcontainer{
+  width: 500px;
   border-radius: 10px;
   background-color: rgba(22,23,26,0.8);
   margin: 16px 16px 16px 16px;
-  display: block;
   display: flex;
   align-items: flex-start;
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgb(65, 95, 219);
   overflow:hidden;
 }
 .skillicon{
-  filter: invert(100%);
-  width: 80px;
-  height: 100%;
-  padding: 16px;
+  width: 56px;
+  padding: 10px;
 }
 .skilltitle{
+  background-color: rgba(62,63,66,0.3);
   font-size: 26px;
-  padding: 16px 16px 0px 0px;
-}
-.skilldesc{
-  padding: 0px 16px 16px 16px;
-  color: rgb(206,208,210);
+  line-height: 40px;
+  padding: 16px 16px 16px 16px;
+  border-radius: 10px;
+  box-shadow: 0px 10px 8px rgb(0,0,0,0.3);
 }
 .skilltext{
-background-color: rgba(32,33,36,0.8);
-padding: 0px 0px 0px 16px;
-border-left-style: dashed;
-border-left-width: 2px;
-border-color: rgba(62,63,66,0.8);
+  width: 100%;
+  background-color: rgba(32,33,36,0.8);
+  padding: 0px 0px 0px 0px;
+  border-top-left-radius: 10px;
 }
-
+.skilldesc{
+  padding: 8px 16px 16px 16px;
+  color: rgb(206,208,210);
+  flex-grow: 2;
+  line-height: 26px;
+  font-size: 18px;
+}
 .button, .activebutton{
   font-size: 26.25px;
   color: rgb(245, 240, 255);
@@ -240,9 +234,6 @@ border-color: rgba(62,63,66,0.8);
 }
 
 .projectitem{
-  border-style: solid;
-  border-width: 2px;
-  border-color: rgb(65, 95, 219);
   border-radius: 22.5px;
   overflow: hidden;
   width: 300px;
@@ -304,7 +295,9 @@ border-color: rgba(62,63,66,0.8);
   position: absolute;
   z-index: 1000;
 }
-
+.contacts{
+  display: block;
+}
 .contactitem{
   max-width: 80vw;
   cursor: pointer;
@@ -316,7 +309,7 @@ border-color: rgba(62,63,66,0.8);
   -khtml-user-select: none;
   -webkit-user-select: none;
   -o-user-select: none;
-  display: inline-block;
+  display: inline-flex;
   max-height: 80px;
   white-space:nowrap;
   overflow: hidden;
@@ -335,15 +328,17 @@ border-color: rgba(62,63,66,0.8);
   display: inline-block;
 }
 .conttext{
+  width:300px;
   line-height: 80px;
   text-align: left;
-  font-size: 22.5px;
+  font-size: 20px;
   background: none;
   border: none;
   pointer-events: none;
   overflow: visible;
   display: inline-block;
   vertical-align:top;
+  margin-left: 16px;
 }
 .conttext:focus{
   outline: none;
@@ -365,10 +360,12 @@ border-color: rgba(62,63,66,0.8);
 
 
 .cpypic{
+  width: 80px;
   height: 30px;
   align-self: flex-end;
   margin: 0px;
-  padding: 25px;
+  padding-top: 25px;
+  padding-bottom: 25px;
   display: inline-block;
 }
 
@@ -397,10 +394,25 @@ li{
 #navmenuopener{
   display: none;
   margin-top: 0px;
+  width: 100%;
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+
+.navmenupic{
+  width: 40px;
+  height: 100%;
+  pointer-events: none;
 }
 
 #navmenuopenerbutton{
-  border-radius: 0px;
+  margin: 10px;
+  width: 80px;
+  border-radius: 25px;
+  height: 50px;
   background: rgba(32,33,36,0.6);
 }
 #navmenuopenerbutton:hover{
@@ -439,7 +451,9 @@ li{
     display: none;
   }
   #navmenuopener{
-    display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
     margin-top: 0px;
     margin-bottom: 0px;
   }
@@ -475,7 +489,9 @@ li{
   .conttext{
     line-height: 120px;
     font-size: 33.75px;
+    width:506px;
   }
+
   .contpicbg{
     height: 120px;
     width: 120px;
@@ -489,13 +505,101 @@ li{
     display: none;
   }
   #navmenuopener{
-    display: block;
+    display: flex;
   }
 
-  .projectitem{
-    width: 450px;
-    height: 562.5px;
+  #navmenuopenerbutton{
+    margin: 20px;
+    width: 160px;
+    border-radius: 50px;
+    height: 100px;
   }
+
+  .navmenupic{
+    width: 80px;
+  }
+
+
+  .skillcontainer{
+    width: 800px;
+    border-radius: 10px;
+    background-color: rgba(22,23,26,0.8);
+    margin: 16px 16px 16px 16px;
+    display: flex;
+    align-items: flex-start;
+    overflow:hidden;
+  }
+  .skillicon{
+    width: 112px;
+    padding: 20px;
+  }
+  .skilltitle{
+    background-color: rgba(62,63,66,0.3);
+    font-size: 52px;
+    line-height: 80px;
+    padding: 16px 16px 16px 16px;
+    border-radius: 10px;
+    box-shadow: 0px 10px 8px rgb(0,0,0,0.3);
+  }
+  .skilltext{
+    width: 100%;
+    background-color: rgba(32,33,36,0.8);
+    padding: 0px 0px 0px 0px;
+    border-top-left-radius: 10px;
+  }
+  .skilldesc{
+    padding: 8px 16px 16px 16px;
+    color: rgb(206,208,210);
+    flex-grow: 2;
+    line-height: 40px;
+    font-size: 28px;
+  }
+
+
+
+  .portfoliopic{
+    float: right;
+    width: 260px;
+    margin-left: 20px;
+    margin-bottom: 20px;
+    border-radius: 20px;
+  }
+
+
+  .projectlistitem{
+    padding-right: 30px;
+    padding-left: 30px;
+    max-width: 90%;
+    margin-bottom: 50px;
+    margin-top: 50px;
+  }
+
+
+  .projectitem{
+    border-radius: 45px;
+    width: 800px;
+    height: 1000px;
+    max-width: 100%;
+  }
+
+  .projpic{
+    border-radius: 45px 45px 0px 0px;
+      height: 64%;
+  }
+
+  .projectname{
+    padding: 0px 32px 0px 32px;
+    line-height: 75px;
+    font-size: 37.5px;
+    border-radius: 0px 45px 0px 0px;
+    top: 64%;
+  }
+
+  .projectdesc{
+    padding: 16px 32px 16px 32px;
+    font-size: 32px;
+  }
+
 
 
 }
