--- a/style.css
+++ b/style.css
@@ -114,6 +114,7 @@ a {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
+  text-overflow: ellipsis;
   overflow: hidden;
 }
 .abouttextcontainer{
@@ -135,6 +136,7 @@ a {
   margin-left: 10px;
   margin-bottom: 10px;
   border-radius: 20px;
+  box-shadow: 5px 10px 8px rgb(0,0,0,0.3);
 }
 
 /*Skills section*/
@@ -151,7 +153,6 @@ a {
   margin: 16px 16px 16px 16px;
   display: flex;
   align-items: flex-start;
-  overflow:hidden;
 }
 .skillicon{
   width: 56px;
@@ -285,7 +286,8 @@ a {
   width: 90%;
   height: 100%;
   max-height: 40%;
-  overflow: auto;
+  text-overflow: ellipsis;
+  overflow: hidden;
   color: rgb(206,208,210);
 }
 
@@ -312,7 +314,8 @@ a {
   display: inline-flex;
   max-height: 80px;
   white-space:nowrap;
-  overflow: hidden;
+  text-overflow: ellipsis;
+  overflow: hidden; 
 }
 .contactitem:hover{
   background: rgba(52,54,58,0.8);
@@ -555,16 +558,14 @@ li{
     font-size: 28px;
   }
 
-
-
   .portfoliopic{
     float: right;
     width: 260px;
     margin-left: 20px;
     margin-bottom: 20px;
     border-radius: 20px;
+    box-shadow: 10px 20px 16px rgb(0,0,0,0.3);
   }
-
 
   .projectlistitem{
     padding-right: 30px;
