--- a/css/style.css
+++ b/css/style.css
@@ -30,16 +30,14 @@ a {
 }
 
 /*Sections of the webpage*/
-#boxprojects{
-  position: relative;
-  width: 100%;
-  min-height: 100vh;
-  min-height: calc(var(--vh, 1vh) * 100);
-}
+
 #boxhome {
   position: relative;
   display: flex;
   font-weight: bold;
+  height: 100vh;
+  min-height: 100vh;
+  min-height: calc(var(--vh, 1vh) * 100);
 }
 #boxabout {
   position: relative;
@@ -60,6 +58,9 @@ a {
   padding: 1px 0% calc(var(--vh, 1vh) * 10) 0%;
   clear: both;
   position: relative;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
 }
 
 /*Generic settings for sections*/
@@ -79,9 +80,16 @@ a {
   width: 80%;
   margin: 0% 10%;
 }
+.flex-row{
+  display: flex;
+  flex-direction: row;
+  position: relative;
+  height: 100%;
+  width: 100%;
+}
 .verticalwrapper {
-  position: absolute;
-  height: 70%;
+  position: relative;
+  height: 100%;
   width: 100%;
   max-height: 70%;
   transform: translate(0, 21.25%);
@@ -96,13 +104,6 @@ a {
   font-size: 18px;
 }
 
-/*Welcome message*/
-#welcome {
-  font-family: sans-serif;
-  position: relative;
-  font-size: 9vmin;
-  visibility: hidden;
-}
 /*About section*/
 #abouttext {
   margin: 1% 0px 0px 0px;
@@ -219,162 +220,6 @@ a {
   z-index: -1;
 }
 
-.projectlist{
-  position: relative;
-  text-align: center;
-  width: 100%;
-  line-height: 120px;
-}
-
-.projectlistitem{
-  padding-right: 30px;
-  padding-left: 30px;
-  max-width: 75%;
-  text-align: left;
-  float: none;
-  display: inline-block;
-  line-height: normal;
-  font-size: 15px;
-}
-
-.projectitem{
-  border-radius: 22.5px;
-  overflow: hidden;
-  width: 300px;
-  height: 375px;
-  max-width: 100%;
-  background-color: rgba(32,33,36,0.9);
-  transform: scale(1.0);
-  -webkit-transition: transform 100ms linear, background-color 100ms linear;
-  cursor: pointer;
-
-  user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -o-user-select: none;
-}
-
-.projectitem:hover{
-  transform: scale(1.1);
-  background-color: rgba(52,54,58,1);
-}
-.projectitem:active{
-  background-color: rgba(72,74,78,0.9);
-}
-
-.projpic{
-  width: 100%;
-  height: 50%;
-  object-fit: cover;
-  object-position: center;
-  border-radius: 22.5px 22.5px 0px 0px;
-}
-
-.projectname{
-  z-index: 10;
-  padding: 0px 16px 0px 16px;
-  top: 50%;
-  transform: translateY(-100%);
-  line-height: 37.5px;
-  background-color: rgba(32,33,36,0.8);
-  position: absolute;
-  font-size: 18.75px;
-  border-radius: 0px 22.5px 0px 0px;
-  font-weight: bold;
-}
-
-.projectdesc{
-  padding: 8px 16px 8px 16px;
-  width: 90%;
-  height: 100%;
-  max-height: 40%;
-  text-overflow: ellipsis;
-  overflow: hidden;
-  color: rgb(206,208,210);
-}
-
-.projectlink{
-  width: 100%;
-  height: 100%;
-  position: absolute;
-  z-index: 1000;
-}
-.contacts{
-  display: block;
-}
-.contactitem{
-  max-width: 80vw;
-  cursor: pointer;
-  background: rgba(32,33,36,0.8);
-  border-radius: 40px;
-  -webkit-transition: color 100ms linear, transform 100ms linear, background-color linear 100ms;
-  user-select: none;
-  -moz-user-select: none;
-  -khtml-user-select: none;
-  -webkit-user-select: none;
-  -o-user-select: none;
-  display: inline-flex;
-  max-height: 80px;
-  white-space:nowrap;
-  text-overflow: ellipsis;
-  overflow: hidden;
-}
-.contactitem:hover{
-  background: rgba(52,54,58,0.8);
-}
-.contactitem:active{
-  background: rgba(72,74,78,0.8);
-}
-
-.contpic{
-  padding: 10px;
-  height: 60px;
-  width: 60px;
-  display: inline-block;
-}
-.conttext{
-  width:300px;
-  line-height: 80px;
-  text-align: left;
-  font-size: 20px;
-  background: none;
-  border: none;
-  pointer-events: none;
-  overflow: visible;
-  display: inline-block;
-  vertical-align:top;
-  margin-left: 16px;
-}
-.conttext:focus{
-  outline: none;
-  border: none;
-}
-.contactlistitem{
-  margin: 0px 0px 3vh 0px;
-  margin: 0px 0px  calc(var(--vh, 1vh) * 3) 0px;
-}
-
-.contpicbg{
-  text-align: center;
-  height: 80px;
-  width: 80px;
-  background: rgba(32,33,36,0.8);
-  border-radius: 40px;
-  display: inline-block;
-}
-
-
-.cpypic{
-  width: 80px;
-  height: 30px;
-  align-self: flex-end;
-  margin: 0px;
-  padding-top: 25px;
-  padding-bottom: 25px;
-  display: inline-block;
-}
-
 h1{
   text-align: center;
 }
@@ -488,30 +333,7 @@ li{
       padding-bottom: 0px;
   }
 
-  .contactitem{
-    border-radius: 60px;
-    max-height: 120px;
-  }
-  .contpic{
-    padding: 15px;
-    height: 90px;
-    width: 90px;
-  }
-  .conttext{
-    line-height: 120px;
-    font-size: 33.75px;
-    width:506px;
-  }
-
-  .contpicbg{
-    height: 120px;
-    width: 120px;
-      border-radius: 60px;
-  }
-  .cpypic{
-    height: 45px;
-    padding: 37.5px;
-  }
+  
   #navitems{
     display: none;
   }
@@ -575,42 +397,6 @@ li{
     box-shadow: 10px 20px 16px rgb(0,0,0,0.3);
   }
 
-  .projectlistitem{
-    padding-right: 30px;
-    padding-left: 30px;
-    max-width: 90%;
-    margin-bottom: 50px;
-    margin-top: 50px;
-  }
-
-
-  .projectitem{
-    border-radius: 45px;
-    width: 800px;
-    height: 1000px;
-    max-width: 100%;
-  }
-
-  .projpic{
-    border-radius: 45px 45px 0px 0px;
-      height: 64%;
-  }
-
-  .projectname{
-    padding: 0px 32px 0px 32px;
-    line-height: 75px;
-    font-size: 37.5px;
-    border-radius: 0px 45px 0px 0px;
-    top: 64%;
-  }
-
-  .projectdesc{
-    padding: 16px 32px 16px 32px;
-    font-size: 32px;
-  }
-
-
-
 }
 
 li:hover {
@@ -634,3 +420,4 @@ li:hover {
 ::-webkit-scrollbar-thumb:hover {
   background-color: rgb(65, 95, 219);
 }
+
