--- a/css/projects.css
+++ b/css/projects.css
@@ -11,8 +11,10 @@
     width: 100%;
     line-height: 120px;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
+    flex-wrap: wrap;
     align-items: center;
+    justify-content: center;
   }
   
   .projectlistitem{
@@ -20,7 +22,8 @@
     padding-bottom: 15px;
     padding-right: 15px;
     padding-left: 15px;
-    max-width: 90%;
+    width: 210px;
+    max-width: 50%;
     text-align: left;
     float: none;
     display: block;
@@ -30,13 +33,12 @@
   
   .projectitem{
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   
     border-radius: 12.5px;
     overflow: hidden;
     height: 400px;
     max-width: 100%;
-    background-color: rgba(32,33,36,0.9);
     transform: scale(1.0);
     -webkit-transition: transform 100ms linear, background-color 100ms linear;
     cursor: pointer;
@@ -57,21 +59,18 @@
   }
   
   .projpic{
-    height: 100%;
-    width: 40%;
+    height: 40%;
+    width: 100%;
     object-fit: cover;
     object-position: center;
-    border-radius: 12.5px 12.5px 0px 0px;
+    border-radius: 5.5px 5.5px 5.5px 5.5px;
   }
   
   .projectname{
     z-index: 10;
     padding: 0px 16px 0px 16px;
-    top: 60.1%;
-    transform: translateY(-100%);
     line-height: 37.5px;
-    background-color: rgba(32,33,36,0.8);
-    position: absolute;
+    position: relative;
     font-size: 18.75px;
     border-radius: 0px 22.5px 0px 0px;
     font-weight: bold;
@@ -80,8 +79,6 @@
   .projectdesc{
     padding: 8px 16px 8px 16px;
     width: 90%;
-    height: 100%;
-    max-height: 40%;
     text-overflow: ellipsis;
     overflow: hidden;
     color: rgb(206,208,210);
