--- a/css/projects.css
+++ b/css/projects.css
@@ -37,7 +37,6 @@
   
     border-radius: 12.5px;
     overflow: hidden;
-    height: 400px;
     max-width: 100%;
     transform: scale(1.0);
     -webkit-transition: transform 100ms linear, background-color 100ms linear;
@@ -59,8 +58,9 @@
   }
   
   .projpic{
-    height: 40%;
     width: 100%;
+    min-height: 160px;
+    max-height: 240px;
     object-fit: cover;
     object-position: center;
     border-radius: 5.5px 5.5px 5.5px 5.5px;
@@ -78,7 +78,6 @@
   
   .projectdesc{
     padding: 8px 16px 8px 16px;
-    width: 90%;
     text-overflow: ellipsis;
     overflow: hidden;
     color: rgb(206,208,210);
