--- a/public/css/style.css
+++ b/public/css/style.css
@@ -143,6 +143,7 @@ a {
   line-height: 49.875px;
   border-radius: 24.9375px;
   box-shadow: 0px 0px 0px rgba(0,0,0,0.0);
+  border-width: 0;
   -webkit-transition: color 100ms linear, transform 100ms linear, box-shadow 100ms linear, box-shadow 100ms linear, background-color linear 100ms;
   background-color: rgba(32,33,36,0.8);
   cursor: pointer;
@@ -175,6 +176,7 @@ a {
 
 h1{
   text-align: center;
+  font-size: 9vmin;
 }
 nav{
   position: fixed;
