--- a/public/css/projects.css
+++ b/public/css/projects.css
@@ -97,39 +97,34 @@
 
 
 @media (min-width:600px) and (orientation: portrait) {
-/*
-.projectlistitem{
-      padding-right: 30px;
-      padding-left: 30px;
-      max-width: 90%;
-      margin-bottom: 50px;
-      margin-top: 50px;
-    }
 
+  .projectname {
+      line-height: 75px;
+      font-size: 37.5px;
+  }
+  .projectdesc{
+      font-size: 32px;
+  }
 
-    .projectitem{
-      border-radius: 45px;
-      width: 800px;
-      height: 1000px;
-      max-width: 100%;
-    }
+  .projpic{
+    min-height: 280px;
+    max-height: 760px;
+    border-radius: 11px 11px 11px 11px;
+  }
+    
+  .projectitem{
+    border-radius: 25px;
+  }
 
-    .projpic{
-    border-radius: 45px 45px 0px 0px;
-        height: 64%;
-    }
+  .projectlistitem{
+    padding-top: 30px;
+    padding-bottom: 30px;
+    padding-right: 30px;
+    padding-left: 30px;
+    min-width: 420px;
+    max-width: 1000px;
+    flex-basis: 34vw;
+    font-size: 30px;
+  }
 
-    .projectname{
-    padding: 0px 32px 0px 32px;
-    line-height: 75px;
-    font-size: 37.5px;
-    border-radius: 0px 45px 0px 0px;
-    top: 64%;
-    }
-
-    .projectdesc{
-    padding: 16px 32px 16px 32px;
-    font-size: 32px;
-    }
-*/
 }
