--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -4,8 +4,7 @@
 }
 
 .contactlistitem{
-    margin: 0px 0px 4vh 0px;
-    margin: 0px 0px  calc(var(--vh, 1vh) * 4) 0px;
+    margin: 0px 0px 28px 0px;
 }
 
 .contacts{
@@ -111,5 +110,9 @@
     .cpypic{
         height: 45px;
         padding: 37.5px;
+    }
+
+    .contactlistitem{
+        margin: 0px 0px 56px 0px;
     }
 }
