--- a/public/css/projectstyle.css
+++ b/public/css/projectstyle.css
@@ -1,3 +1,52 @@
+.homebutton{
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  margin: 8px;
+}
+
+.homebuttonicon{
+  width: 32px;
+  height: 32px;
+  margin: 8px;
+  display: inline-block;
+}
+
+a {
+  color: inherit;
+}
+
+.button, .activebutton{
+  display: inline-block;
+  padding: 0px;
+  font-size: 26.25px;
+  color: rgb(245, 240, 255);
+  font-weight: bold;
+  transform: scale(1.0);
+  border-radius: 16.0px;
+  box-shadow: 0px 0px 0px rgba(0,0,0,0.0);
+  border-width: 0;
+  -webkit-transition: color 100ms linear, transform 100ms linear, box-shadow 100ms linear, box-shadow 100ms linear, background-color linear 100ms;
+  background-color: rgba(32,33,36,0.8);
+  cursor: pointer;
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+
+.button:hover, .activebutton{
+  transform: scale(1.1);
+  color: rgb(255, 255, 255);
+  text-shadow: 0px 0px 5px rgba(255, 255, 255,0.3);
+  box-shadow: 3px 4px 5px rgba(0,0,0,0.4);
+  -webkit-transition: color 100ms linear, transform 100ms linear, box-shadow 100ms linear, box-shadow 100ms linear, background-color linear 100ms;
+  background-color: rgb(65, 95, 219);
+}
+.button:active, .activebutton:active{
+  background-color: rgb(125, 155, 255);
+}
 
 *{
   margin: 0px;
@@ -38,4 +87,11 @@ h1{
 p{
   margin: 10px;
     color: rgb(206,208,210);
+}
+
+.centeringdiv{
+  text-align: center;
+  align-items: center;
+  align-self: center;
+  justify-content: center;
 }
