--- a/public/css/home.css
+++ b/public/css/home.css
@@ -41,26 +41,32 @@
 }
 
 
-@media (max-width:800px) or (max-height:500px) {
 
-    #welcome {
-        font-size: 6vmin;
-    }
-
-    .portrait-container{
-        width: 300px;
-    }
-    .home-portrait{
-        width: 200px;
-    }
-}
 
 @media (max-width:600px) and (orientation: portrait) {
     .portrait-container{
-        display: none;
+        position: absolute;
+        width: 100%;
+        height: 100%;
     }
 
     #welcome {
         font-size: 8vmin;
     }
+
+
+    #welcometxt{
+        text-shadow: 1px 1px 20px black;
+    }
+    
+    #welcometxtwelcome{
+        text-shadow: 1px 1px 20px black;
+    }
+    
+    #welcometxtlist{
+        text-shadow: 1px 1px 20px black;
+    }
+    
 }
+
+
