--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,3 +1,11 @@
+.home-layout{
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    height: 100%;
+    width: 100%;
+}
+
 .portrait-container{
     width: 500px;
     position: relative;
@@ -45,9 +53,8 @@
 
 @media (min-width:600px) and (orientation: portrait) {
     .portrait-container{
-        position: absolute;
         width: 100%;
-        height: 100%;
+        height: 500px;
     }
 
     #welcome {
@@ -65,6 +72,11 @@
     
     #welcometxtlist{
         text-shadow: 1px 1px 20px black;
+    }
+
+    .home-layout{
+        display: flex;
+        flex-direction: column;
     }
     
 }
