--- a/public/css/home.css
+++ b/public/css/home.css
@@ -54,7 +54,7 @@
 @media (min-width:600px) and (orientation: portrait) {
     .portrait-container{
         width: 100%;
-        height: 500px;
+        height: 30%;
     }
 
     #welcome {
