--- a/public/css/home.css
+++ b/public/css/home.css
@@ -48,13 +48,19 @@
     color: rgb(206,208,210);
 }
 
-
+.welcome-text-wrapper{
+    position: relative;
+    height: 100%;
+    width: 100%;
+    max-height: 70%;
+    transform: translate(0, 21.25%);
+}
 
 
 @media (min-width:600px) and (orientation: portrait) {
     .portrait-container{
         width: 100%;
-        height: 30%;
+        height: 40%;
     }
 
     #welcome {
@@ -79,6 +85,13 @@
         flex-direction: column;
     }
     
+    .welcome-text-wrapper{
+        position: relative;
+        width: 100%;
+        height: 60%;
+        max-height: 60%;
+        transform: translate(0, 0);
+    }
 }
 
 
