--- a/public/css/home.css
+++ b/public/css/home.css
@@ -60,7 +60,7 @@
 @media (min-width:600px) and (orientation: portrait) {
     .portrait-container{
         width: 100%;
-        height: 40%;
+        height: 50%;
     }
 
     #welcome {
@@ -88,8 +88,8 @@
     .welcome-text-wrapper{
         position: relative;
         width: 100%;
-        height: 60%;
-        max-height: 60%;
+        height: auto;
+        max-height: 100%;
         transform: translate(0, 0);
     }
 }
