--- a/public/css/projectstyle.css
+++ b/public/css/projectstyle.css
@@ -73,10 +73,10 @@ h1{
   text-align: center;
   border-radius: 10px;
   background-color: rgba(22,23,26,0.8);
-  margin: 32px 0px 32px 0px;
+  margin: 8px 0px 32px 0px;
   border-style: solid;
   border-width: 2px;
-  border-color: rgb(65, 95, 219);
+  border-color: rgba(65, 95, 219, 0.5);
   text-align: left;
   display: block;
   flex-wrap: wrap;
@@ -94,4 +94,44 @@ p{
   align-items: center;
   align-self: center;
   justify-content: center;
+}
+
+li{
+  margin: 10px;
+    color: rgb(206,208,210);
+}
+
+.project-image{
+  height: 280px;
+  border-radius: 10px;
+}
+
+.project-image-container{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin: 0px 5px 0px 5px;
+}
+
+.flex-horizontal{
+  display: flex;
+  flex-direction: row;
+  align-items: inherit;
+  justify-content: inherit;
+  flex-wrap: wrap;
+}
+
+.image-caption{
+  color: rgb(206,208,210);
+  font-size: small;
+  margin: 1px;
+  margin-bottom: 10px;
+}
+
+.project-graph{
+  height: 280px;
+  width: 80vw;
+  border-radius: 10px;
+  filter: invert(1);
 }
