project image sizing mobile

--- a/public/css/projectstyle.css
+++ b/public/css/projectstyle.css
@@ -138,6 +138,7 @@ li{
 
 @media (min-width:600px) and (orientation: portrait) {
   .project-image{
-    height: 380px;
+    height: auto;
+    width: 80vw;
   }
 }
