--- a/public/css/projectstyle.css
+++ b/public/css/projectstyle.css
@@ -137,6 +137,9 @@ li{
 }
 
 @media (min-width:600px) and (orientation: portrait) {
+  p{
+    font-size: 16px;
+  }
   .project-image{
     height: auto;
     width: 80vw;
@@ -144,8 +147,7 @@ li{
   .image-caption{
     font-size: medium;
   }
-  p{
-    font-size: 16px;
+  body{
+    background-color: rgb(255, 0, 0);
   }
-
 }
